--- a/config/nginx_defaults.conf
+++ b/config/nginx_defaults.conf
@@ -54,5 +54,33 @@ server {
     autoindex on;
 }
 
+#SSL PROXY
+server {
+    listen 443 ssl;
+    #server_name *.securenetwork.cc;
+
+    ssl_certificate      /mnt/repo/.system/ssl/securenetwork.cc.combined.crt;
+    ssl_certificate_key  /mnt/repo/.system/ssl/securenetwork.cc.key;
+    #Limiting Ciphers
+    ssl_ciphers HIGH:!ADH;
+    ssl_prefer_server_ciphers on;
+    ssl_protocols SSLv3;
+
+    keepalive_timeout    30;
+    proxy_buffering off;
+
+    location / {
+        proxy_pass  http://mycoffeebiz.public.homeplatehq.com/;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+
+        ### By default we don't want to redirect it ####
+        #proxy_redirect     off;
+    }
+}
+
 #include /mnt/*/*/.config/*.nginx;
 include /mnt/conf/nginx.d/*.conf;
