--- a/config/nginx_defaults.conf
+++ b/config/nginx_defaults.conf
@@ -56,8 +56,30 @@ server {
 
 #SSL PROXY
 server {
+    #All non SSL connections just get a 404.
+    server_name *.securenetwork.cc securenetwork.cc;
+	resolver 8.8.8.8;
+
+    location / {
+        proxy_pass  http://$proxy_to/$request_uri;
+
+        add_header X-SSL-Proxy yes;
+        #proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+
+        ### By default we don't want to redirect it ####
+        #proxy_redirect     off;
+    }
+}
+
+
+server {
+    #Proxy all SSL connections to the proper internal site.
     listen 443 ssl;
     #server_name *.securenetwork.cc;
+	resolver 8.8.8.8;
 
     ssl_certificate      /mnt/repo/.system/ssl/securenetwork.cc.combined.crt;
     ssl_certificate_key  /mnt/repo/.system/ssl/securenetwork.cc.key;
@@ -70,9 +92,10 @@ server {
     proxy_buffering off;
 
     location / {
-        proxy_pass  http://mycoffeebiz.public.homeplatehq.com/;
+        proxy_pass  http://$proxy_to/$request_uri;
 
-        proxy_set_header Host $host;
+        add_header X-SSL-Proxy yes;
+        #proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -82,5 +105,8 @@ server {
     }
 }
 
-#include /mnt/*/*/.config/*.nginx;
+map $http_host $proxy_to {
+    include /mnt/conf/ssl_canonical.map;
+}
+
 include /mnt/conf/nginx.d/*.conf;
